refactor inventory service