@@ -1,8 +1,10 @@
 package se.saltcode.inventory.controller;
 
+import java.net.URI;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
+
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
@@ -18,61 +20,46 @@ import se.saltcode.inventory.service.InventoryService;
 public class InventoryController {
 
   private final InventoryService inventoryService;
+  private final String apiUri;
 
-  public InventoryController(InventoryService inventoryService) {
+  public InventoryController(InventoryService inventoryService,
+                             @Value("${this.base-uri}${api.base-path}${api.controllers.inventory}") String apiUri) {
     this.inventoryService = inventoryService;
+    this.apiUri = apiUri;
   }
 
   @GetMapping
   public ResponseEntity<List<InventoryDto>> getAllInventoryItems() {
-    List<InventoryDto> items =
-        inventoryService.getAllInventoryItems().stream()
-            .map(Inventory::toResponseObject)
-            .collect(Collectors.toList());
-    return new ResponseEntity<>(items, HttpStatus.OK);
+    return ResponseEntity.ok(inventoryService.getAllInventoryItems().stream().map(Inventory::toDto).toList());
   }
 
   @GetMapping("/{id}")
   public ResponseEntity<InventoryDto> getInventoryItemById(@PathVariable("id") UUID id) {
-    Inventory item = inventoryService.getInventoryItemById(id);
-    return new ResponseEntity<>(item.toResponseObject(), HttpStatus.OK);
+    return ResponseEntity.ok(inventoryService.getInventoryItemById(id).toDto());
   }
 
   @PostMapping
   public ResponseEntity<InventoryDto> createInventoryItem(
       @RequestBody AddInventoryDto addInventoryDTO) {
-    Inventory createdItem = inventoryService.createInventoryItem(new Inventory(addInventoryDTO));
-    return new ResponseEntity<>(createdItem.toResponseObject(), HttpStatus.CREATED);
+    InventoryDto inventoryDto = inventoryService.createInventoryItem(new Inventory(addInventoryDTO)).toDto();
+    return ResponseEntity.created(URI.create(apiUri + "/" + inventoryDto.id())).body(inventoryDto);
   }
 
   @PutMapping("/{id}")
   public ResponseEntity<InventoryDto> updateInventoryItem(
       @PathVariable("id") UUID id, @RequestBody InventoryDto inventoryDTO) {
-    Inventory inventory = new Inventory(inventoryDTO);
-    Inventory updatedItem = inventoryService.updateInventoryItem(id, inventory);
-    if (updatedItem != null) {
-      return new ResponseEntity<>(updatedItem.toResponseObject(), HttpStatus.OK);
-    } else {
-      return new ResponseEntity<>(HttpStatus.NOT_FOUND);
-    }
+    return ResponseEntity.ok(inventoryService.updateInventoryItem(new Inventory(inventoryDTO)).toDto());
   }
 
   @DeleteMapping("/{id}")
   public ResponseEntity<Void> deleteInventoryItem(@PathVariable("id") UUID id) {
-    boolean deleted = inventoryService.deleteInventoryItem(id);
-    return new ResponseEntity<>(HttpStatus.NO_CONTENT);
-  }
-
-  @GetMapping("/{id}/quantity")
-  public ResponseEntity<Integer> getQuantityOfInventory(@PathVariable("id") UUID id) {
-    Inventory item = inventoryService.getInventoryItemById(id);
-    return new ResponseEntity<>(item.getQuantity(), HttpStatus.OK);
+    inventoryService.deleteInventoryItem(id);
+    return ResponseEntity.noContent().build();
   }
 
   @PutMapping("/update/quantity")
   public ResponseEntity<UpdateResult> updateQuantityOfInventory(
       @RequestParam UUID inventoryId, @RequestParam int change, @RequestParam UUID transactionId) {
-    return new ResponseEntity<>(
-        inventoryService.updateQuantityOfInventory(inventoryId, change, transactionId), HttpStatus.OK);
+    return ResponseEntity.ok(inventoryService.updateQuantityOfInventory(inventoryId, change, transactionId));
   }
 }
